--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -13,7 +13,8 @@ a:hover { text-decoration:underline; }
     padding:160px 0 60px; margin-top:100px;
     border: 1px solid #ccc;
     border-bottom:20px solid #8c1515;
-    background:#fff url(../img/Stanford_Medicine_logo-web-CS.png) 50% 20px no-repeat;
+    background:#fff url(../img/well_logo.png) 50% 50px no-repeat;
+    background-size:14%;
 }
 .well h2 {     
 	margin: 0;
@@ -24,6 +25,12 @@ a:hover { text-decoration:underline; }
     margin:10px 0 30px;
 }
 
+#main-content .well { 
+	padding-top:260px;
+}
+#main-content .login_reg { 
+	padding-top:18px;
+}
 
 /*SESSION ALERT*/
 .alert-info { 
