--- a/dashboard/css/custom.css
+++ b/dashboard/css/custom.css
@@ -150,6 +150,12 @@ h2.weather,
 
 
 /*DASHBOARD*/
+@media (min-width: 768px){
+    .header-md .navbar-brand img {
+        max-height: 52px;
+    }
+}
+
 .corefour .block {
     min-height : 40px;
     text-align : center;
