--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -12,7 +12,7 @@ a:hover { text-decoration:underline; }
     box-shadow: 1px 1px 3px 0.2px #ccc;
     padding:160px 0 60px; margin-top:100px;
     border: 1px solid #ccc;
-    border-bottom:20px solid #8c1515;
+    border-bottom:20px solid #c42128;
     background:#fff url(../img/well_logo.png) 50% 50px no-repeat;
     background-size:14%;
 }
