--- a/dashboard/css/custom.css
+++ b/dashboard/css/custom.css
@@ -210,7 +210,7 @@ h2.weather,
     padding : 10px 0 0;
     /*border-radius : 10px;*/
     /*background    : #fff ;*/
-    overflow-y      : auto;
+    /*overflow-y      : auto;*/
 }
 
 .customform {
@@ -218,9 +218,9 @@ h2.weather,
     overflow : hidden;
     overflow-y : auto;
     width : calc(100% + 10px);
-    min-height : 80vh;
+    min-height : 100%;
     margin : 0 0 0 0;
-    padding : 30px 0;
+    padding : 30px 0 0;
     text-align : left;
     color : #222;
 }
@@ -228,7 +228,7 @@ h2.weather,
     color:#333;
 }
 .customform .required .q_label i:after {
-    content:"*";
+    /*content:"*";*/
 }
 .customform .custom.or_divider {
     font-weight: bold;
@@ -248,9 +248,16 @@ h2.weather,
     padding : 0;
     vertical-align : top;
     opacity : 0;
-
     transition : .8s opacity , .2s left ease-in-out;
 }
+.customform .section .inputwrap:last-child:after{
+    position:relative; 
+    content:"";
+    display:block; 
+    width:100%;
+    height:100px;
+}
+
 .customform .section.active {
     z-index : 1;
     left : 0;
@@ -1068,4 +1075,15 @@ input[readonly] {
 
 #customform {
     transition : .8s top ease-in-out;
+}
+
+.under_construction {
+    position:relative; 
+}
+.under_construction:after{
+    content:"";
+    position:absolute; right:5px; top:-20px;
+    background: url(../images/under_construction.gif) no-repeat;
+    background-size:contain;
+    width:50px; height:50px;
 }
