--- a/dashboard/css/custom.css
+++ b/dashboard/css/custom.css
@@ -1113,8 +1113,9 @@ input[readonly] {
     margin: 0; padding: 0;
     background-color: none;
     position: absolute;
-    background:url(../images/ico_new.gif) no-repeat;
-    width:32px; height:16px;
+    background:url(../images/ico_left_arrow.gif) no-repeat;
+    width:24px; height:24px;
+    background-size:contain;
     top: 10px;
     right: 10px;
     text-indent:-5000px;
