--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -418,3 +418,24 @@ a:hover { text-decoration:underline; }
 
 
 
+#testserver {
+	background: #C42128;
+    color: #fff;
+    text-transform: uppercase;
+    font-size: 18px;
+    display: block;
+    position: fixed;
+    top: 40px;
+    right: -50px;
+    top: -15px\0/;
+    right: -32px\0/;
+    width: 200px;
+    -ms-transform: rotate(45deg);
+    -moz-transform: rotate(45deg);
+    -o-transform: rotate(45deg);
+    -webkit-transform: rotate(45deg);
+    transform: rotate(45deg);
+    -ms-filter: "progid:DXImageTransform.Microsoft.Matrix(SizingMethod='auto expand', M11=0.7071067811865476, M12=-0.7071067811865475, M21=0.7071067811865475, M22=0.7071067811865476)";
+    text-align: center;
+    z-index:20000;
+}
